--- a/css/style.css
+++ b/css/style.css
@@ -477,6 +477,10 @@ input[type="checkbox"] {
   font-size: 1em;
   color: #212c3a;
 }
+label {
+  margin-left: 5px;
+  margin-bottom: 4px;
+}
 .border {
   border-bottom: 1px solid #eff0f1;
 }
@@ -829,13 +833,13 @@ input[type="checkbox"] {
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    gap: 1.4vw;
+    gap: 1.9vw;
     padding: 20px 0;
   }
   .card {
     box-shadow: #959da533 0px 8px 24px;
-    width: 23%;
-    height: 280px;
+    width: 25%;
+    height: 0px;
     border-radius: 10px;
     overflow: hidden;
   }
@@ -880,4 +884,174 @@ input[type="checkbox"] {
     justify-content: center;
     padding: 4px 0;
   }
+}
+
+footer {
+  background: #f1f3f7;
+}
+footer .ft-top,
+.ft-end span {
+  display: flex;
+  justify-content: space-between;
+}
+.ft-top div {
+  gap: 30px;
+  font-size: 1em;
+}
+.ft-top i {
+  font-size: 1.2em;
+  color: #8d94ad;
+}
+.ft-top a:hover,
+.ft-top i:hover,
+.ft-bottom a:hover,
+.footermarkalar a:hover {
+  color: #ca1016;
+}
+.ft-bottom a {
+  font-size: 0.85em;
+  color: black;
+  margin: 20px 30px 0 0;
+}
+hr {
+  border-color: #f1f3f741;
+}
+.footermarkalar span a {
+  width: 200px;
+  display: inline-block;
+  color: gray;
+  font-size: 0.85em;
+  margin: 5px 0;
+}
+.ft-end {
+  background: #ca1016;
+  color: #fff;
+  font-size: 0.85em;
+}
+.ft-end a {
+  color: #fff;
+  margin-left: 30px;
+}
+.cards {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.4vw;
+  padding: 20px 0;
+}
+.card {
+  box-shadow: #959da533 0px 8px 24px;
+  width: 23%;
+  height: 280px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.card img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+}
+.card-sum {
+  padding: 15px;
+}
+.card-sum span {
+  color: #808080d8;
+  font-size: 0.88em;
+}
+.card-img {
+  position: relative;
+}
+.card-img i,
+.heart,
+.user,
+#goster {
+  cursor: pointer;
+}
+.card-img .fa-heart {
+  top: 6%;
+  right: 6%;
+  font-size: 1.4rem;
+  color: #fff;
+  position: absolute;
+}
+.card-img span {
+  position: absolute;
+  display: flex;
+  gap: 5px;
+  background: #fff;
+  bottom: 6%;
+  right: 6%;
+  width: 50px;
+  font-size: 0.9em;
+  border-radius: 5px;
+  justify-content: center;
+  padding: 4px 0;
+}
+.accordion {
+  background-color: transparent;
+  color: #000;
+  cursor: pointer;
+  padding: 15px 30px;
+  width: 100%;
+  border: 0;
+  text-align: left;
+  outline: none;
+  font-size: 1em;
+  transition: 0.4s;
+}
+.accordion:after {
+  content: "+";
+  color: #dbd8d8;
+  font-size: 1.2em;
+  float: right;
+}
+.active:after {
+  content: "-";
+}
+.panel {
+  padding: 0 5px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.45s ease-out;
+}
+.panel p {
+  margin: 25px 0;
+}
+.secilmisler,
+.login {
+  display: none;
+}
+.secilmisler {
+  padding: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2vw;
+  margin-bottom: 30px;
+  background-color: #ebedf39d;
+  height: 100vh;
+}
+.secilmis-main .text {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+  margin: 20vh auto;
+}
+.yardim .y-top {
+  display: flex;
+  padding: 20px 30px;
+  justify-content: space-between;
+}
+.y-btns {
+  padding: 10px 20px;
+}
+.y-btns button {
+  padding: 15px;
+  border-radius: 48px;
+  border: 0;
+}
+.y-btns button:first-child {
+  background: #ca1016;
+  color: #fff;
 }
